--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,7 +11,7 @@ server:
 #    org.springframework.orm.jpa: DEBUG
 
 spring:
-  sql.init.mode: always
+#  sql.init.mode: always
 #  main.allow-circular-references: true
   cloud:
     stream:
@@ -51,8 +51,8 @@ spring:
     username: postgres
     password: postgres
 
-management:
+#management:
 #  metrics.tags.application: transactions-locks-app
-  endpoints.web.exposure.include: health,info,prometheus
+#  endpoints.web.exposure.include: health,info,prometheus
 
 
